--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,13 +3,14 @@ GameName=FallGuys
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Game1.Game1
-GameDefaultMap=/Game/Maps/Game1.Game1
+GameDefaultMap=/Game/Maps/Game0.Game0
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/BluePrint/Charactor/GM_My.GM_My_C
+GlobalDefaultGameMode=/Game/BluePrint/Charactor/GM_Begin.GM_Begin_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/BluePrint/Charactor/GI_Sk.GI_Sk_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -20,6 +21,8 @@ r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+r.MinScreenRadiusForLights=0.000000
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
